--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEntities.cpp" />
     <ClCompile Include="GameEvents.cpp" />
-    <ClCompile Include="GhostDirectionComponent.cpp" />
+    <ClCompile Include="GhostDirectionInputComponent.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="KeyboardDirectionInputComponent.cpp" />
     <ClCompile Include="main.cpp" />
@@ -196,8 +196,8 @@
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="DrawSystem.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="GhostDirectionComponent.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="GhostDirectionInputComponent.h" />
     <ClInclude Include="GraphicsComponent.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="KeyboardDirectionInputComponent.h" />
