--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="MoveSystem.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="PointGranterComponent.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SpeedSystem.cpp" />
@@ -179,7 +180,7 @@
     <ClCompile Include="UID.cpp" />
     <ClCompile Include="Velocity.cpp" />
     <ClCompile Include="VelocityComponent.cpp" />
-    <ClCompile Include="DirectionValidatorComponent.cpp" />
+    <ClCompile Include="LastValidDirectionComponent.cpp" />
     <ClCompile Include="WallPathingSystem.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -207,6 +208,7 @@
     <ClInclude Include="MoveSystem.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="PointGranterComponent.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="SpeedSystem.h" />
@@ -220,7 +222,7 @@
     <ClInclude Include="UID.h" />
     <ClInclude Include="Velocity.h" />
     <ClInclude Include="VelocityComponent.h" />
-    <ClInclude Include="DirectionValidatorComponent.h" />
+    <ClInclude Include="LastValidDirectionComponent.h" />
     <ClInclude Include="WallPathingSystem.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="Wrapper.h" />
