Move some drawing logic out of Game to DrawSystem. Add and modify some of the DirectionInputComponent logic.

--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="ColorGraphicsComponent.cpp" />
     <ClCompile Include="DirectionAnimationSystem.cpp" />
+    <ClCompile Include="DirectionInputComponent.cpp" />
     <ClCompile Include="DrawSystem.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEntities.cpp" />
