--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MoveSystem.cpp" />
+    <ClCompile Include="PathGoalComponent.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="PointGranterComponent.cpp" />
@@ -183,7 +184,7 @@
     <ClCompile Include="Velocity.cpp" />
     <ClCompile Include="VelocityComponent.cpp" />
     <ClCompile Include="LastValidDirectionComponent.cpp" />
-    <ClCompile Include="WallPathingSystem.cpp" />
+    <ClCompile Include="WallHuggingSystem.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -209,6 +210,7 @@
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MoveSystem.h" />
+    <ClInclude Include="PathGoalComponent.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="PointGranterComponent.h" />
@@ -226,7 +228,7 @@
     <ClInclude Include="Velocity.h" />
     <ClInclude Include="VelocityComponent.h" />
     <ClInclude Include="LastValidDirectionComponent.h" />
-    <ClInclude Include="WallPathingSystem.h" />
+    <ClInclude Include="WallHuggingSystem.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="Wrapper.h" />
   </ItemGroup>
