--- a/Cap-Man/Cap-Man.vcxproj.filters
+++ b/Cap-Man/Cap-Man.vcxproj.filters
@@ -192,6 +192,15 @@
     <ClCompile Include="TeleportSystem.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="BreadcrumbFollowerComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="BreadcrumbFollowerSystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="BreadcrumbTrailSystem.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UID.h">
@@ -348,6 +357,15 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="TeleportSystem.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="BreadcrumbFollowerComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="BreadcrumbFollowerSystem.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="BreadcrumbTrailSystem.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
   </ItemGroup>
