--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="PointsCollectorComponent.cpp" />
+    <ClCompile Include="PseudoRandomDirectionComponent.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="PelletMonitoringSystem.cpp" />
@@ -230,6 +231,7 @@
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="PointsCollectorComponent.h" />
+    <ClInclude Include="PseudoRandomDirectionComponent.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="PelletMonitoringSystem.h" />
@@ -248,6 +250,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="UID.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="Velocity.h" />
     <ClInclude Include="VelocityComponent.h" />
     <ClInclude Include="LastValidDirectionComponent.h" />
