--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -169,6 +169,8 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MoveSystem.cpp" />
     <ClCompile Include="PathGoalComponent.cpp" />
+    <ClCompile Include="PauseComponent.cpp" />
+    <ClCompile Include="PauseSystem.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="PointsCollectorComponent.cpp" />
@@ -228,6 +230,8 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="MoveSystem.h" />
     <ClInclude Include="PathGoalComponent.h" />
+    <ClInclude Include="PauseComponent.h" />
+    <ClInclude Include="PauseSystem.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="PointsCollectorComponent.h" />
